--- a/todo
+++ b/todo
@@ -1,8 +1,16 @@
+[.] In progress
+[?] May cancel
+[/] Completed
+[X] Cancelled
+[ ] Planned
+
 Config tasks:
-[ ] Add banned channels to config
+[?] Add banned channels to config
 [/] Shift pins to config
+[/] Remove magic numbers & generalise pin code
+[/] Migrate video formats to config
 [.] Integrate various other variables & shit into config - should be able to make the bot fully packagable by the end
-[ ] Generalised reaction system via config
+[X] Generalised reaction system via config
 
 Backend rewrite:
 [ ] Add utils.cache & cache Firestore results for semi-regular uploads (15 mins?)
@@ -12,7 +20,7 @@ Backend rewrite:
 Content:
 [ ] o.fight rewrite
 
-[ ] Synergy - Democratised control
+[ ] Synergy - Democratised control:
 [ ] - Plan
 [ ] - New channel command
 [ ] - Modify channel command
@@ -28,7 +36,7 @@ Content:
 [ ] - Determine data storage method & abstraction
 [ ] - Actually write
 
-[ ] Load Balancer
+[ ] Load Balancer:
 [/] - Plan
 [.] - Write
 
@@ -37,14 +45,14 @@ Content:
 [ ] - Route through domain
 
 Log:
-[ ] Transfer logging to file
-
-
+[/] Set up logging system
+[/] Migrate print commands to logs
+[/] Add logging to all new commands
 
 Bug fixes:
 [/] Fix o.status bug
-[ ] Get orb_define API key(s)
-[ ] - Fix o.define bugs
+[X] Get orb_define API key(s)
+[X] - Fix o.define bugs
 [.] SPELLCHECK
 [/] Ping time bug
 [/] o.pin time offset
